Fix hambuger styles dark mode.

--- a/css/style.css
+++ b/css/style.css
@@ -634,6 +634,10 @@ video {
   z-index: 20;
 }
 
+.z-30 {
+  z-index: 30;
+}
+
 .m-auto {
   margin: auto;
 }
@@ -652,8 +656,8 @@ video {
   margin-top: 1.25rem;
 }
 
-.mr-2 {
-  margin-right: 0.5rem;
+.block {
+  display: block;
 }
 
 .flex {
@@ -859,9 +863,9 @@ video {
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
-.bg-gray-500 {
+.bg-gray-800 {
   --tw-bg-opacity: 1;
-  background-color: rgb(107 114 128 / var(--tw-bg-opacity));
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
 .bg-rose-500 {
@@ -887,11 +891,6 @@ video {
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-gray-800 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-t {
@@ -1080,20 +1079,17 @@ video {
   z-index: 20;
 }
 
-:is(.dark .dark\:z-auto) {
-  z-index: auto;
-}
-
-:is(.dark .dark\:-z-10) {
-  z-index: -10;
-}
-
 :is(.dark .dark\:block) {
   display: block;
 }
 
 :is(.dark .dark\:hidden) {
   display: none;
+}
+
+:is(.dark .dark\:bg-rose-800) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(159 18 57 / var(--tw-bg-opacity));
 }
 
 :is(.dark .dark\:bg-slate-900) {
@@ -1106,49 +1102,14 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-:is(.dark .dark\:bg-gray-400) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
-}
-
-:is(.dark .dark\:bg-rose-500) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(244 63 94 / var(--tw-bg-opacity));
-}
-
-:is(.dark .dark\:bg-rose-600) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(225 29 72 / var(--tw-bg-opacity));
-}
-
-:is(.dark .dark\:bg-rose-700) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(190 18 60 / var(--tw-bg-opacity));
-}
-
-:is(.dark .dark\:bg-rose-800) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(159 18 57 / var(--tw-bg-opacity));
-}
-
 :is(.dark .dark\:from-slate-800) {
   --tw-gradient-from: #1e293b var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(30 41 59 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-:is(.dark .dark\:from-slate-100) {
-  --tw-gradient-from: #f1f5f9 var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(241 245 249 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
 :is(.dark .dark\:to-slate-900) {
   --tw-gradient-to: #0f172a var(--tw-gradient-to-position);
-}
-
-:is(.dark .dark\:to-slate-100) {
-  --tw-gradient-to: #f1f5f9 var(--tw-gradient-to-position);
 }
 
 :is(.dark .dark\:text-gray-100) {
